New post: I Want To Create

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
         <h2>About</h2>
-        <p>I wanted to write so I made this site</p>
+        <p>I wanted to create something so I made this site</p>
 
         <!-- <hr> -->
 
